WIP validari si html-uri si pe mamaliga lor

--- a/src/pages/instruments/02_cibs_ru.html
+++ b/src/pages/instruments/02_cibs_ru.html
@@ -238,6 +238,7 @@
                 <div>LK12. Этническая принадлежность (национальность) ребенка</div>
                 <div>
                     <select id="lk12" name="lk12" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
                         <option value="1">1. Узбек/чка</option>
                         <option value="2">2. Русский/кая</option>
                         <option value="3">3. Казах/шка</option>
@@ -760,6 +761,7 @@
                 <div>CM4. Этническая принадлежность матери (национальность)</div>
                 <div>
                     <select id="cm4" name="cm4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
                         <option value="1">1. Узбек/чка</option>
                         <option value="2">2. Русский/кая</option>
                         <option value="3">3. Казах/шка</option>
@@ -1269,6 +1271,7 @@
                 <div>СТ4. Этническая принадлежность (национальность) отца</div>
                 <div>
                     <select id="ct4" name="ct4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
                         <option value="1">1. Узбек</option>
                         <option value="2">2. Русский</option>
                         <option value="3">3. Казах</option>
@@ -1747,6 +1750,7 @@
                 <div>CG4. Этническая принадлежность (национальность) опекуна</div>
                 <div>
                     <select id="cg4" name="cg4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- выбрать ---</option>
                         <option value="1">1. Узбек/чка</option>
                         <option value="2">2. Русский/кая</option>
                         <option value="3">3. Казах/шка</option>
