--- a/src/pages/instruments/02_cibs_uz.html
+++ b/src/pages/instruments/02_cibs_uz.html
@@ -238,6 +238,7 @@
                 <div>LK12. Bolaning etnik kelib chiqishi (millati)</div>
                 <div>
                     <select id="lk12" name="lk12" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
                         <option value="1">1. O'zbek</option>
                         <option value="2">2. Rus</option>
                         <option value="3">3. Qozoq</option>
@@ -760,6 +761,7 @@
                 <div>CM4. Onaning etnik kelib chiqishi (millati)</div>
                 <div>
                     <select id="cm4" name="cm4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
                         <option value="1">1. O'zbek</option>
                         <option value="2">2. Rus</option>
                         <option value="3">3. Qozoq</option>
@@ -1269,6 +1271,7 @@
                 <div>CT4. Otasining etnik kelib chiqishi (millati)</div>
                 <div>
                     <select id="ct4" name="ct4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
                         <option value="1">1. O'zbek</option>
                         <option value="2">2. Rus</option>
                         <option value="3">3. Qozoq</option>
@@ -1747,6 +1750,7 @@ NA
                 <div>CG4. Vasiyning etnik kelib chiqishi (millati)</div>
                 <div>
                     <select id="cg4" name="cg4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- tanlang ---</option>
                         <option value="1">1. O'zbek</option>
                         <option value="2">2. Rus</option>
                         <option value="3">3. Qozoq</option>
