--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -123,9 +123,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-4">
-                <div>
-                    OMR4. Position/role <small class="block italic text-red-500">Fill in case manager if the person plays this role.</small>
-                </div>
+                <div>OMR4. Position/role</div>
                 <div>
                     <input type="text" id="omr4" name="omr4" class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full" />
                 </div>
