--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -518,19 +518,6 @@
                 <div class="ml-4">c. children/young people in conflict with the law</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
-                        <input id="fc2f-1" type="radio" value="1" name="fc2f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc2f-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="fc2f-2" type="radio" value="0" name="fc2f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc2f-2" class="ms-2 text-sm text-gray-900">0. No</label>
-                    </div>
-                </div>
-            </div>
-            <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">d. adolescents (10+ years) with behavioral disorders?</div>
-                <div class="col-span-1 flex items-center gap-4">
-                    <div class="flex items-center">
                         <input id="fc2c-1" type="radio" value="1" name="fc2c" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="fc2c-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
@@ -541,7 +528,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">e. girls who are underage mothers or pregnant?</div>
+                <div class="ml-4">d. adolescents (10+ years) with behavioral disorders?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc2d-1" type="radio" value="1" name="fc2d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -554,7 +541,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div class="ml-4">f. group of siblings?</div>
+                <div class="ml-4">e. girls who are underage mothers or pregnant?</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc2e-1" type="radio" value="1" name="fc2e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
@@ -563,6 +550,19 @@
                     <div class="flex items-center">
                         <input id="fc2e-2" type="radio" value="0" name="fc2e" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="fc2e-2" class="ms-2 text-sm text-gray-900">0. No</label>
+                    </div>
+                </div>
+            </div>
+            <div class="grid grid-cols-2 gap-4 items-center mt-10">
+                <div class="ml-4">f. group of siblings?</div>
+                <div class="col-span-1 flex items-center gap-4">
+                    <div class="flex items-center">
+                        <input id="fc2f-1" type="radio" value="1" name="fc2f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="fc2f-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="fc2f-2" type="radio" value="0" name="fc2f" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
+                        <label for="fc2f-2" class="ms-2 text-sm text-gray-900">0. No</label>
                     </div>
                 </div>
             </div>
@@ -622,11 +622,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c1d-1" type="radio" value="1" name="fc4_c1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c1d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c1d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c1d-2" type="radio" value="2" name="fc4_c1d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c1d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c1d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -723,11 +723,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c2d-1" type="radio" value="1" name="fc4_c2d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c2d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c2d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c2d-2" type="radio" value="2" name="fc4_c2d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c2d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c2d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -825,11 +825,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c3d-1" type="radio" value="1" name="fc4_c3d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c3d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c3d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c3d-2" type="radio" value="2" name="fc4_c3d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c3d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c3d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -928,11 +928,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c4d-1" type="radio" value="1" name="fc4_c4d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c4d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c4d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c4d-2" type="radio" value="2" name="fc4_c4d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c4d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c4d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1030,11 +1030,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c5d-1" type="radio" value="1" name="fc4_c5d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c5d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c5d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c5d-2" type="radio" value="2" name="fc4_c5d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c5d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c5d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1132,11 +1132,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c6d-1" type="radio" value="1" name="fc4_c6d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c6d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c6d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c6d-2" type="radio" value="2" name="fc4_c6d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c6d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c6d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1234,11 +1234,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c7d-1" type="radio" value="1" name="fc4_c7d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c7d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c7d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c7d-2" type="radio" value="2" name="fc4_c7d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c7d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c7d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1336,11 +1336,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c8d-1" type="radio" value="1" name="fc4_c8d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c8d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c8d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c8d-2" type="radio" value="2" name="fc4_c8d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c8d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c8d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1438,11 +1438,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c9d-1" type="radio" value="1" name="fc4_c9d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c9d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c9d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c9d-2" type="radio" value="2" name="fc4_c9d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c9d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c9d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
@@ -1540,11 +1540,11 @@
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center">
                         <input id="fc4_c10d-1" type="radio" value="1" name="fc4_c10d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c10d-1" class="ms-2 text-sm text-gray-900">1. Male</label>
+                        <label for="fc4_c10d-1" class="ms-2 text-sm text-gray-900">1. Yes</label>
                     </div>
                     <div class="flex items-center">
                         <input id="fc4_c10d-2" type="radio" value="2" name="fc4_c10d" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="fc4_c10d-2" class="ms-2 text-sm text-gray-900">2. Female</label>
+                        <label for="fc4_c10d-2" class="ms-2 text-sm text-gray-900">2. No</label>
                     </div>
                 </div>
             </div>
