--- a/src/pages/instruments/02_cibs_en.html
+++ b/src/pages/instruments/02_cibs_en.html
@@ -238,6 +238,7 @@
                 <div>LK12. Child's ethnicity (nationality)</div>
                 <div>
                     <select id="lk12" name="lk12" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
                         <option value="1">1. Uzbek</option>
                         <option value="2">2. Russian</option>
                         <option value="3">3. Kazakh</option>
@@ -760,6 +761,7 @@
                 <div>CM4. Mother's ethnicity (nationality)</div>
                 <div>
                     <select id="cm4" name="cm4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
                         <option value="1">1. Uzbek</option>
                         <option value="2">2. Russian</option>
                         <option value="3">3. Kazakh</option>
@@ -1269,6 +1271,7 @@
                 <div>CT4. Father's ethnicity (nationality)</div>
                 <div>
                     <select id="ct4" name="ct4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
                         <option value="1">1. Uzbek</option>
                         <option value="2">2. Russian</option>
                         <option value="3">3. Kazakh</option>
@@ -1747,6 +1750,7 @@
                 <div>CG4. Caregiver's ethnicity (nationality)</div>
                 <div>
                     <select id="cg4" name="cg4" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
                         <option value="1">1. Uzbek</option>
                         <option value="2">2. Russian</option>
                         <option value="3">3. Kazakh</option>
