--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -180,7 +180,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div>PI4b. Region</div>
                 <div>
                     <select id="pi4b" name="pi4b" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -189,7 +189,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div>PI4c. District</div>
                 <div>
                     <select id="pi4c" name="pi4c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -197,7 +197,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div>PI4d. Settlement</div>
                 <div>
                     <select id="pi4d" name="pi4d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -209,56 +209,28 @@
 
             <input type="hidden" id="pi4e" name="pi4e" />
 
-
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div class="col-span-1">PI5. Child's ethnicity (nationality)</div>
-                <div class="col-span-1 flex flex-col gap-2">
-                    <div class="flex items-center">
-                        <input id="pi5-1" type="radio" value="1" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-1" class="ms-2 text-sm text-gray-900">1. Uzbek</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-2" type="radio" value="2" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-2" class="ms-2 text-sm text-gray-900">2. Russian</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-3" type="radio" value="3" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-3" class="ms-2 text-sm text-gray-900">3. Kazakh</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-4" type="radio" value="4" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-4" class="ms-2 text-sm text-gray-900">4. Tajik</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-5" type="radio" value="5" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-5" class="ms-2 text-sm text-gray-900">5. Tatar</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-6" type="radio" value="6" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-6" class="ms-2 text-sm text-gray-900">6. Karakalpaks</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-7" type="radio" value="7" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-7" class="ms-2 text-sm text-gray-900">7. Kyrgyz</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-8" type="radio" value="8" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-8" class="ms-2 text-sm text-gray-900">8. Korean</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-9" type="radio" value="9" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-9" class="ms-2 text-sm text-gray-900">9. Other</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi5-10" type="radio" value="0" name="pi5" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi5-20" class="ms-2 text-sm text-gray-900">0. Not declared/unknown</label>
-                    </div>
+                <div>PI5. Child's ethnicity (nationality)</div>
+                <div>
+                    <select id="lk12" name="lk12" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
+                        <option value="-9">--- choose ---</option>
+                        <option value="{{lk12-1}}">1. Uzbek/option>
+                        <option value="{{lk12-2}}">2. Russian/option>
+                        <option value="{{lk12-3}}">3. Kazakh/option>
+                        <option value="{{lk12-4}}">4. Tajik/option>
+                        <option value="{{lk12-5}}">5. Tatar/option>
+                        <option value="{{lk12-6}}">6. Karakalpaks/option>
+                        <option value="{{lk12-7}}">7. Kyrgyz/option>
+                        <option value="{{lk12-8}}">8. Korean/option>
+                        <option value="{{lk12-9}}">9. Other/option>
+                        <option value="{{lk12-10}}">0. Not declared/unknown/option>
+                    </select>
                 </div>
             </div>
 
             <p class="mt-6"><br>The last institution where the young person lived before leaving the child care system, according to the corresponding Register</b></p>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div>PI6r. Region</div>
                 <div>
                     <select id="pi6r" name="pi6r" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -267,7 +239,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div>PI6d. District</div>
                 <div>
                     <select id="pi6d" name="pi6d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -347,19 +319,11 @@
                         <input id="pi10a-3" type="radio" value="3" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
                         <label for="pi10-3" class="ms-2 text-sm text-gray-900">3. In an institution / residential service for adults</label>
                     </div>
-                    <div class="flex items-center">
-                        <input id="pi10a-4" type="radio" value="4" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi10-4" class="ms-2 text-sm text-gray-900">4. Abroad</label>
-                    </div>
-                    <div class="flex items-center">
-                        <input id="pi10a-5" type="radio" value="5" name="pi9a" class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200" />
-                        <label for="pi10-5" class="ms-2 text-sm text-gray-900">5. Not known</label>
-                    </div>
                 </div>
             </div>
 
             <p>b. Legal domicile:</p>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div class="ml-4">c. Region:</div>
                 <div>
                     <select id="pi9c" name="pi9c" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -368,7 +332,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div class="ml-4">d. District:</div>
                 <div>
                     <select id="pi9d" name="pi9d" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -376,7 +340,7 @@
                     </select>
                 </div>
             </div>
-            <div class="grid grid-cols-2 items-center gap-4 mt-6">
+            <div class="grid grid-cols-2 gap-4 items-center">
                 <div class="ml-4">h. Settlement</div>
                 <div>
                     <select id="pi9h" name="pi9h" class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full">
@@ -494,7 +458,9 @@
                     </div>
                 </div>
             </div>
-            <p class="mt-6">QUESTIONS LV1-LV6 APPLY ONLY IF THE YOUNG PERSON LIVES IN THE COMMUNITY (CODE 1 OR 2 IN PI9). IF IN ADULT CARE INSTITUTIONS PLESE SKIP TO LV7</p>
+
+            <p class="mt-6">QUESTIONS LV1-LV6 APPLY ONLY IF THE YOUNG PERSON LIVES IN THE COMMUNITY (CODE 1 OR 2 IN PI9). IF IN ADULT CARE INSTITUTIONS PLEASE SKIP TO LV7</p>
+
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="col-span-1">LV1. Where does the person currently live?</div>
                 <div class="col-span-1 flex flex-col gap-2">
