--- a/src/pages/instruments/09_eef_ru.html
+++ b/src/pages/instruments/09_eef_ru.html
@@ -1714,6 +1714,11 @@
             <textarea placeholder="Примечания" name="e59_n" id="e59_n" rows="3" class="mt-2 bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block disabled:bg-gray-100 p-2.5 w-full"></textarea>
 
 
+            <div class="grid mt-10">
+                <label for="obs">OBS. Наблюдения</label>
+                <textarea class="form-control" rows="3" id="obs" name="obs"></textarea>
+            </div>
+
         </form>
 
 
